force-app/main/default/objects/Lead/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to whom this lead is assigned</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>