force-app/main/default/objects/Lead/fields/Company_Size_Score__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Score__c</fullName>
    <description>Score based on company size</description>
    <label>Company Size Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>