force-app/main/default/objects/Lead/fields/Industry_Score__c.field-meta.xml
<CustomField>
    <fullName>Industry_Score__c</fullName>
    <description>Score based on industry type</description>
    <label>Industry Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>