force-app/main/default/objects/Lead/fields/Last_Scored_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scored_Date__c</fullName>
    <description>Date and time when lead was last scored</description>
    <label>Last Scored Date</label>
    <type>DateTime</type>
</CustomField>