force-app/main/default/objects/Lead/fields/Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>Lead_Grade__c</fullName>
    <description>Lead quality grade</description>
    <label>Lead Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>